Lock the size of all columns in the app This will ensure that the output box is always the same size as the Blockly workspace, preventing the output from overflowing the page

--- a/static/css/workspace.css
+++ b/static/css/workspace.css
@@ -1,3 +1,34 @@
+#appSpace {
+    height: 80vh;
+    max-height: 80vh;
+}
+
 #blocklyArea {
     height: 80vh;
+}
+
+#outputColumn {
+    height: 80vh;
+    max-height: 80vh;
+}
+
+#buttonColumn {
+    max-height: 100%
+}
+
+.columnHeader {
+    height: 5%;
+}
+
+.columnContent {
+    height: 95%;
+}
+
+#outputArea {
+    display: block;
+    max-height: 100%;
+}
+
+#scroller {
+    max-height: 100%;
 }
